make some changes

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
   <body>  
   <center>    
-    <h1>Hallo, du möchtest Deutsch lernen ?</h1>
-      <h2> Wir möchten dir Helfen !</h2> 
+    <h1>Hallo, du mÃ¶chtest Deutsch lernen ?</h1>
+      <h2> Wir mÃ¶chten dir Helfen !</h2> 
     <br>
         
- <img src="Hallo.png" style="max-width:100%;height:auto;"> 
-	<h3> In den Letzten Jahren kamen viele Asylsuchenden nach Deutschland <br> für
-	 sie ist es Schwierig Deutsch zu lernen, mit diesem Github Projekt möchte ich sie unterstützen. <br>
-	 Dabei kann jeder seine Erfahrung einfließen lassen und dem Projekt helfen. <br>
+ <img src="Hallo.png" style="max-width:200%;height:auto;"> 
+	<h3> In den Letzten Jahren kamen viele Asylsuchenden nach Deutschland <br> fÃ¼r
+	 sie ist es Schwierig Deutsch zu lernen, mit diesem Github Projekt mÃ¶chte ich sie unterstÃ¼tzen. <br>
+	 Dabei kann jeder seine Erfahrung einflieÃŸen lassen und dem Projekt helfen. <br>
 	Da Wlan-Hotspots rar und mobiles Datenvolumen knapp sind, verzichtet diese Projekt <br>
-	auf unnötige Zusätze Wie eine überladene Benutzeroberfläche. 
+	auf unnÃ¶tige ZusÃ¤tze Wie eine Ã¼berladene BenutzeroberflÃ¤che. 
 	</h3>
 
 	<a href="">Los gehts</a> 	
