--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <br>
         
  <img src="Hallo.png" style="max-width:200%;height:auto;"> 
-	<h3> In den Letzten Jahren kamen viele Asylsuchenden nach Deutschland <br> für
-	 sie ist es Schwierig Deutsch zu lernen, mit diesem Github Projekt möchte ich sie unterstützen. <br>
-	 Dabei kann jeder seine Erfahrung einfließen lassen und dem Projekt helfen. <br>
-	Da Wlan-Hotspots rar und mobiles Datenvolumen knapp sind, verzichtet diese Projekt <br>
-	auf unnötige Zusätze Wie eine überladene Benutzeroberfläche. 
+	<h3> In den Letzten Jahren kamen viele Asylsuchende nach Deutschland. <br> Ohne Unterstützungsmöglichkeiten ist es daher für
+	 sie besonders schwierig Deutsch zu lernen. Mit diesem erstellten Github Projekt möchte ich sie unterstützen um ihnen den Start 
+		im fremden Land bestmöglich zu vereinfachen. <br>
+	 Dabei kann jeder seine Erfahrung einfließen lassen um dem Projekt zu verhelfen. <br>
+	Da Wlan-Hotspots rar und mobiles Datenvolumen knapp sind, verzichtet dieses Projekt <br>
+	auf unnötige Zusätze wie eine überladene Benutzeroberfläche. 
 	</h3>
 
 	<a href="">Los gehts</a> 	
